# hdf5-rt

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/plans/: 2026-02-05-runtime-loading-completion-design.md
hdf5/: Cargo.toml
hdf5-types/: Cargo.toml  build.rs
hdf5-types/src/: references.rs
hdf5/examples/: interop_test.rs
hdf5/src/: error.rs  globals.rs  lib.rs  sync.rs
hdf5/src/hl/: chunks.rs  container.rs  dataspace.rs  datatype.rs  file.rs  group.rs  location.rs  references.rs
hdf5/src/hl/plist/: file_access.rs
hdf5/src/hl/references/: legacy.rs
hdf5/src/sys/: mod.rs  runtime.rs
hdf5/tests/: test_dataset.rs
hdf5/tests/common/: gen.rs  util.rs
scripts/: test_hdf5_versions.sh
tests/julia/: Manifest.toml  Project.toml  test_interop.jl
tests/python/: requirements.txt  test_interop.py
